# checkyouragent

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  docker-compose.yml  pricing.csv
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: LICENSE  README.md  pyproject.toml
backend/src/ccfr/: __init__.py  cli.py  cli_export.py  config.py  main.py  naming.py  settings.py
backend/src/ccfr/analysis/: __init__.py  context_economics.py  contribution.py  discovery.py  limits.py  metrics.py  pricing.py  risk_patterns.py  team_bundles.py  team_cost.py  trace.py  usage_characteristics.py  usage_map.py
backend/src/ccfr/api/: __init__.py  analytics.py  deps.py  import_progress.py  naming.py  repository.py  routes.py  schemas.py
backend/src/ccfr/ingest/: __init__.py  file_ext.py  importer.py
backend/src/ccfr/storage/: __init__.py  database.py
backend/tests/: conftest.py  fixtures.py  test_analytics.py  test_analytics_api.py  test_api_repository.py  test_cli.py  test_cli_export.py  test_config.py  test_context_economics.py  test_contribution.py  test_contribution_api.py  test_database.py  test_demo_data.py  test_discovery.py  test_file_ext.py  test_host_validation.py  test_import_api.py  test_importer.py  test_limits.py  test_limits_api.py  test_main.py  test_metrics.py  test_naming.py  test_pricing.py  test_risk_patterns.py  test_settings.py  test_settings_api.py  test_static_serving.py  test_team_bundles.py  test_team_bundles_api.py  test_team_cost.py  test_trace_api.py  test_usage_characteristics.py  test_usage_map.py
demo/: generate_demo_data.py
demo/claude-export/demo-data-pipeline/: 00000005-0000-4000-8000-000000000029.jsonl  00000005-0000-4000-8000-00000000002a.jsonl  00000005-0000-4000-8000-00000000002b.jsonl  00000005-0000-4000-8000-00000000002c.jsonl  00000005-0000-4000-8000-00000000002d.jsonl  00000005-0000-4000-8000-00000000002e.jsonl
demo/claude-export/demo-mobile-app/: 00000005-0000-4000-8000-000000000015.jsonl  00000005-0000-4000-8000-000000000016.jsonl  00000005-0000-4000-8000-000000000017.jsonl  00000005-0000-4000-8000-000000000018.jsonl  00000005-0000-4000-8000-000000000019.jsonl  00000005-0000-4000-8000-00000000001a.jsonl  00000005-0000-4000-8000-00000000001b.jsonl  00000005-0000-4000-8000-00000000001c.jsonl  00000005-0000-4000-8000-00000000001d.jsonl  00000005-0000-4000-8000-00000000001e.jsonl  00000005-0000-4000-8000-00000000001f.jsonl  00000005-0000-4000-8000-000000000020.jsonl  00000005-0000-4000-8000-000000000021.jsonl  00000005-0000-4000-8000-000000000022.jsonl  00000005-0000-4000-8000-000000000023.jsonl  00000005-0000-4000-8000-000000000024.jsonl  00000005-0000-4000-8000-000000000025.jsonl  00000005-0000-4000-8000-000000000026.jsonl  00000005-0000-4000-8000-000000000027.jsonl  00000005-0000-4000-8000-000000000028.jsonl
demo/claude-export/demo-web-shop/: 00000005-0000-4000-8000-000000000001.jsonl  00000005-0000-4000-8000-000000000002.jsonl  00000005-0000-4000-8000-000000000003.jsonl  00000005-0000-4000-8000-000000000004.jsonl  00000005-0000-4000-8000-000000000005.jsonl  00000005-0000-4000-8000-000000000006.jsonl  00000005-0000-4000-8000-000000000007.jsonl  00000005-0000-4000-8000-000000000008.jsonl  00000005-0000-4000-8000-000000000009.jsonl  00000005-0000-4000-8000-00000000000a.jsonl  00000005-0000-4000-8000-00000000000b.jsonl  (+9 more)
docs/: architecture.md  documentation-audit.md
docs/media/: demo.webm
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css  vitest.setup.ts
scripts/: README.md  build_webui.py  capture-audit.mjs  capture-demo.mjs  capture-shots.mjs  package-lock.json  package.json
(+192 files in other folders)
