[project]
name = "check-your-agent"
version = "0.1.0"
description = "Local analytics for Claude Code project exports"
license = { text = "BUSL-1.1" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
]

[project.scripts]
check-your-agent = "ccfr.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build]
# webui/ is git-ignored (built, not source); force it into the sdist/wheel so the
# packaged app can serve the SPA. Without this, hatch's VCS file discovery drops it.
artifacts = ["src/ccfr/webui/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/ccfr"]
