[project]
name = "checkyouragent"
version = "0.1.0"
description = "Local analytics for Claude Code project exports"
readme = "README.md"
license = "BUSL-1.1"
license-files = ["LICENSE"]
authors = [{ name = "Tarek Awwad" }]
requires-python = ">=3.11"
keywords = ["claude-code", "claude", "analytics", "token-usage", "cost", "ai-agents", "forensics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "tzdata>=2024.1",
]

[project.urls]
Homepage = "https://checkyouragent.dev"
Repository = "https://github.com/TarekAwwad/checkyouragent"
Changelog = "https://github.com/TarekAwwad/checkyouragent/blob/main/CHANGELOG.md"
Issues = "https://github.com/TarekAwwad/checkyouragent/issues"

[project.scripts]
checkyouragent = "ccfr.cli:main"
cya = "ccfr.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build]
# webui/ and _assets/ are git-ignored (staged by scripts/build_webui.py, not
# source); force them into the sdist/wheel so the packaged app can serve the
# SPA and find pricing.csv + the demo export. Without this, hatch's VCS file
# discovery drops them.
artifacts = [
    "src/ccfr/webui/**",
    "src/ccfr/_assets/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ccfr"]
